# alura_receitas

./: README.md  pyproject.toml
alurareceita/: settings.py
receitas/: models.py  views.py
receitas/migrations/: 0001_initial.py
receitas/templates/: base.html  index.html  receita.html
tests/: test_django_alura.py
