[tool.poetry]
name = "alura_receita"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Carvalho Rosa <marcus.carvalho@olist.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
